# reddit-project

./: .gitignore  README.md  app.py  docker-compose.yml  notebook.ipynb  pyproject.toml  requirements.txt  streamlit_app.py
api/: Dockerfile  README.md  main.py  pyproject.toml
data-processor-svc/app/: app.py  pyproject.toml
data-processor-svc/app/routers/: fetch.py  status.py
data-processor-svc/app/schema/: request.py  response.py
data-processor-svc/app/src/: get_reddit_data.py  pipelines.py  text_processor.py
model-server/: Dockerfile  README.md  main.py  pyproject.toml
post-consumer/: Dockerfile  README.md
post-producer/: main.py  pyproject.toml  template.env
reddit-consumer/: .env  .template.env  main.py  pyproject.toml
reddit-producer/: .env  Dockerfile  main.py  pyproject.toml  template.env
src/: eda.py  get_reddit_data.py  logger_config.py  pipelines.py  reddit_cred.json  sentiment_analysis.py  text_processor.py
streamlit-app/: Dockerfile  README.md  app.py  requirements.txt
templates/: index.html  sentiment_dashboard.html
tests/: test_text_processor.py
