[project]
name = "model-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "prometheus-client>=0.22.1",
    "pydantic>=2.11.4",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "uvicorn>=0.34.2",
    "vadersentiment>=3.3.2",
]
